build: update phone

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             "logo": "https://vietplywood.com/assets/images/logo.svg",
             "contactPoint": {
                 "@type": "ContactPoint",
-                "telephone": "+84916884008",
+                "telephone": "+84762012459",
                 "contactType": "sales",
                 "areaServed": "VN",
                 "availableLanguage": ["vi", "en"]
@@ -445,7 +445,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-phone"></i>
-                        <span>(+84) 916 884 008<br>(+84) 762 012 459</span>
+                        <span>(+84) 762 012 459</span>
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope"></i>
