--- a/vn/contact/index.html
+++ b/vn/contact/index.html
@@ -42,7 +42,7 @@
                 "contactPoint": [
                     {
                         "@type": "ContactPoint",
-                        "telephone": "+84-916-884-008",
+                        "telephone": "+84-762-012-459",
                         "contactType": "sales",
                         "areaServed": "VN",
                         "availableLanguage": ["Vietnamese", "English"]
@@ -143,7 +143,6 @@
                     </div>
                     <div class="info-text">
                         <strong>Sales Contact</strong>
-                        <div>(+84) 916 884 008</div>
                         <div>(+84) 762 012 459</div>
                     </div>
                 </div>
@@ -248,7 +247,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-phone"></i>
-                        <span>(+84) 916 884 008<br>(+84) 762 012 459</span>
+                        <span>(+84) 762 012 459</span>
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope"></i>
