--- a/vn/products/veneer.html
+++ b/vn/products/veneer.html
@@ -384,7 +384,7 @@
                     </li>
                     <li>
                         <i class="fa-solid fa-phone"></i>
-                        <span>(+84) 916 884 008<br>(+84) 762 012 459</span>
+                        <span>(+84) 762 012 459</span>
                     </li>
                     <li>
                         <i class="fa-solid fa-envelope"></i>
