--- a/vn/about/index.html
+++ b/vn/about/index.html
@@ -142,22 +142,22 @@
 
                 <div class="hero-stats">
                     <div class="stat-item">
-                        <strong>Experience</strong>
+                        <strong>EXPERIENCE</strong>
                         <strong class="stat-highlight">7+</strong>
                         <span>Năm kinh nghiệm</span>
                     </div>
                     <div class="stat-item">
-                        <strong>Production</strong>
+                        <strong>PRODUCTION</strong>
                         <strong class="stat-highlight">2M+</strong>
                         <span>Đã được cung ứng</span>
                     </div>
                     <div class="stat-item">
-                        <strong>Global Reach</strong>
+                        <strong>GLOBAL REACH</strong>
                         <strong class="stat-highlight">10+</strong>
                         <span>Quốc gia đã phục vụ</span>
                     </div>
                     <div class="stat-item">
-                        <strong>Quality</strong>
+                        <strong>SPEED</strong>
                         <strong class="stat-highlight">24 Hr</strong>
                         <span>Tư vấn & báo giá</span>
                     </div>
